# nix-bazel-via-bwrap

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README.md  bugs.md  bwrap_sandbox.sh  env.json  extensions.bzl  flake.nix  go.mod  go.sum  mirrors.json  nix_deps_use_repo.bzl  rules.bzl
cache/: BUILD.bazel  cache.go  lockfile.go  narinfo.go  unpack.go
cmd/nix_builder/: BUILD.bazel  main.go
cmd/nix_runner/: BUILD.bazel  main.go
cmd/nix_tool/: BUILD.bazel  main.go
docs/: toolchain_implementation.md
gazelle_nix/language/nix/: BUILD.bazel  config.go  generate.go  lang.go
generator/: BUILD  BUILD.bazel  builder.go  copier.go  generator.go  generator_test.go  indexer.go  loader.go  types.go
generator/testdata/: golden_build.bazel  golden_input.json
nix_deps/: BUILD.bazel
nix_deps/nix_sources/: BUILD
nix_sources/: 1ln5zvydmijvra2288f5rlf17g3lbsp2-libssh2-1.11.1_  5yzw0vhkyszf2d179m0qfkgxmp5wjjx4-move-docs.sh  BUILD
nixpkgs/: BUILD  nix_deps.bzl
pkg/gazelle/language/nix/: BUILD.bazel  config.go  generate.go  lang.go  resolve.go
pkg/sandbox/: BUILD.bazel  builtins.go  bwrap.go  copier.go  manifest.go  resolve.go  resolve_test.go  runfiles.go
sandbox/: BUILD.bazel  copier.go  runner.go  symlink_test.sh
tests/: run_manual_repro.sh
tests/flakes/minimal_hello/: BUILD.bazel  flake.nix
tests/integration/: BUILD.bazel  defs.bzl  probe_nix.sh  test_cache_miss.sh  test_e2e.sh  test_gazelle_update.sh  test_hello.sh
tests/integration/cache_miss_workspace/: BUILD.bazel.in  MODULE.bazel
tests/integration/cache_miss_workspace/nix_deps/: BUILD.bazel.in
tests/integration/e2e_workspace/: BUILD.bazel.in  MODULE.bazel
tests/integration/e2e_workspace/hello/: flake.nix
tests/integration/e2e_workspace/nix_deps/: BUILD.bazel.in
tests/integration/test_gazelle_update_workspace/: MODULE.bazel
tests/integration/test_hello_workspace/: MODULE.bazel
tests/manual/cache_miss/: BUILD.bazel  flake.nix
tests/manual/env_test/: flake.nix  minimal_flake.nix
tests/manual/hello/: BUILD.bazel  flake.nix
tests/manual_repro_scaffold/: BUILD.bazel  MODULE.bazel
tests/manual_repro_scaffold/hello/: flake.nix
tests/manual_repro_scaffold/playwright_browsers/: BUILD.bazel  defs.bzl  flake.nix  test_browsers.sh
tools/: extract_mirrors.nix
