module(
    name = "nix_bazel_via_bwrap",
    version = "0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "rules_shell", version = "0.2.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bazelbuild_buildtools", "com_github_ulikunitz_xz")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "bootstrap_busybox",
    executable = True,
    sha256 = "87627883b1517087d1c34fadc340bc8deafb3782eb0c60035271822c64dd3401",
    urls = ["http://tarballs.nixos.org/stdenv/x86_64-unknown-linux-gnu/82b583ba2ba2e5706b35dbe23f31362e62be2a9d/busybox"],
)

http_file(
    name = "bootstrap_tools",
    downloaded_file_path = "bootstrap-tools.tar.xz",
    sha256 = "61096bd3cf073e8556054da3a4f86920cc8eca81036580f0d72eb448619b50cd",
    urls = ["http://tarballs.nixos.org/stdenv/x86_64-unknown-linux-gnu/82b583ba2ba2e5706b35dbe23f31362e62be2a9d/bootstrap-tools.tar.xz"],
)

http_file(
    name = "nix_portable",
    downloaded_file_path = "nix-portable",
    executable = True,
    sha256 = "b409c55904c909ac3aeda3fb1253319f86a89ddd1ba31a5dec33d4a06414c72a",
    urls = ["https://github.com/DavHau/nix-portable/releases/download/v012/nix-portable-x86_64"],
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "nixpkgs",
    build_file_content = """
filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "bc9a0a74e8d7fb0e11434dd3abaa0cb0572ccd3a65b5a192eea41832b286e8a0",  # 23.11 release verified
    strip_prefix = "nixpkgs-23.11",
    urls = ["https://github.com/NixOS/nixpkgs/archive/refs/tags/23.11.tar.gz"],
)

nix_deps = use_extension("//:extensions.bzl", "nix_deps_ext")
use_repo(nix_deps, "nix_source_Python_3_13_11_tar_xz")
use_repo(nix_deps, "nix_source_acl_2_3_2_tar_gz")
use_repo(nix_deps, "nix_source_attr_2_5_2_tar_gz")
use_repo(nix_deps, "nix_source_autoconf_2_72_tar_xz")
use_repo(nix_deps, "nix_source_automake_1_18_1_tar_xz")
use_repo(nix_deps, "nix_source_bash53_001")
use_repo(nix_deps, "nix_source_bash53_002")
use_repo(nix_deps, "nix_source_bash53_003")
use_repo(nix_deps, "nix_source_bash_5_3_tar_gz")
use_repo(nix_deps, "nix_source_binutils_with_gold_2_44_tar_bz2")
use_repo(nix_deps, "nix_source_bison_3_8_2_tar_gz")
use_repo(nix_deps, "nix_source_bootstrap_tools_tar_xz")
use_repo(nix_deps, "nix_source_busybox")
use_repo(nix_deps, "nix_source_byacc_20241231_tgz")
use_repo(nix_deps, "nix_source_bzip2_1_0_8_tar_gz")
use_repo(nix_deps, "nix_source_config_guess_id_948ae97ca5703224bd3eada06b7a69f40dd15a02")
use_repo(nix_deps, "nix_source_config_sub_id_948ae97ca5703224bd3eada06b7a69f40dd15a02")
use_repo(nix_deps, "nix_source_coreutils_9_8_tar_xz")
use_repo(nix_deps, "nix_source_curl_8_17_0_tar_xz")
use_repo(nix_deps, "nix_source_diffutils_3_12_tar_xz")
use_repo(nix_deps, "nix_source_ed_1_22_2_tar_lz")
use_repo(nix_deps, "nix_source_file_5_45_tar_gz")
use_repo(nix_deps, "nix_source_findutils_4_10_0_tar_xz")
use_repo(nix_deps, "nix_source_gawk_5_3_2_tar_xz")
use_repo(nix_deps, "nix_source_gcc_15_2_0_tar_xz")
use_repo(nix_deps, "nix_source_gettext_0_25_1_tar_gz")
use_repo(nix_deps, "nix_source_glibc_2_40_tar_xz")
use_repo(nix_deps, "nix_source_gmp_6_3_0_tar_bz2")
use_repo(nix_deps, "nix_source_grep_3_12_tar_xz")
use_repo(nix_deps, "nix_source_gzip_1_14_tar_xz")
use_repo(nix_deps, "nix_source_isl_0_20_tar_xz")
use_repo(nix_deps, "nix_source_keyutils_1_6_3_tar_gz")
use_repo(nix_deps, "nix_source_krb5_1_22_1_tar_gz")
use_repo(nix_deps, "nix_source_libidn2_2_3_8_tar_gz")
use_repo(nix_deps, "nix_source_libssh2_1_11_1_tar_gz")
use_repo(nix_deps, "nix_source_libtool_2_5_4_tar_gz")
use_repo(nix_deps, "nix_source_libunistring_1_4_1_tar_gz")
use_repo(nix_deps, "nix_source_libxcrypt_4_5_2_tar_xz")
use_repo(nix_deps, "nix_source_linux_6_16_7_tar_xz")
use_repo(nix_deps, "nix_source_lzip_1_25_tar_gz")
use_repo(nix_deps, "nix_source_m4_1_4_20_tar_bz2")
use_repo(nix_deps, "nix_source_make_4_4_1_tar_gz")
use_repo(nix_deps, "nix_source_mpc_1_3_1_tar_gz")
use_repo(nix_deps, "nix_source_mpfr_4_2_2_tar_xz")
use_repo(nix_deps, "nix_source_nghttp2_1_67_1_tar_bz2")
use_repo(nix_deps, "nix_source_openssl_3_6_0_tar_gz")
use_repo(nix_deps, "nix_source_patch_2_8_tar_xz")
use_repo(nix_deps, "nix_source_patchelf_0_15_2_tar_bz2")
use_repo(nix_deps, "nix_source_pcre2_10_46_tar_bz2")
use_repo(nix_deps, "nix_source_perl_5_42_0_tar_gz")
use_repo(nix_deps, "nix_source_pkg_config_0_29_2_tar_gz")
use_repo(nix_deps, "nix_source_raw")
use_repo(nix_deps, "nix_source_sed_4_9_tar_xz")
use_repo(nix_deps, "nix_source_tar_1_35_tar_xz")
use_repo(nix_deps, "nix_source_texinfo_7_2_tar_xz")
use_repo(nix_deps, "nix_source_which_2_23_tar_gz")
use_repo(nix_deps, "nix_source_xz_5_8_1_tar_xz")
use_repo(nix_deps, "nix_source_zlib_1_3_1_tar_gz")

nix_lock = use_extension("//:extensions.bzl", "nix_lock_ext")
nix_lock.from_file(lockfile = "//:nix.lock")
use_repo(nix_lock, "nix_cache")
