module(
    name = "nix_bazel_via_bwrap",
    version = "0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_shell", version = "0.2.0")
bazel_dep(name = "rules_bazel_integration_test", version = "0.34.0")

bazel_binaries = use_extension("@rules_bazel_integration_test//:extensions.bzl", "bazel_binaries")
bazel_binaries.download(version = "7.4.1")
use_repo(bazel_binaries, "build_bazel_bazel_7_4_1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bazelbuild_buildtools", "com_github_ulikunitz_xz")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "bootstrap_busybox",
    executable = True,
    sha256 = "87627883b1517087d1c34fadc340bc8deafb3782eb0c60035271822c64dd3401",
    urls = ["http://tarballs.nixos.org/stdenv/x86_64-unknown-linux-gnu/82b583ba2ba2e5706b35dbe23f31362e62be2a9d/busybox"],
)

http_file(
    name = "bootstrap_tools",
    downloaded_file_path = "bootstrap-tools.tar.xz",
    sha256 = "61096bd3cf073e8556054da3a4f86920cc8eca81036580f0d72eb448619b50cd",
    urls = ["http://tarballs.nixos.org/stdenv/x86_64-unknown-linux-gnu/82b583ba2ba2e5706b35dbe23f31362e62be2a9d/bootstrap-tools.tar.xz"],
)

http_file(
    name = "nix_portable",
    downloaded_file_path = "nix-portable",
    executable = True,
    sha256 = "b409c55904c909ac3aeda3fb1253319f86a89ddd1ba31a5dec33d4a06414c72a",
    urls = ["https://github.com/DavHau/nix-portable/releases/download/v012/nix-portable-x86_64"],
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "nixpkgs",
    build_file_content = """
filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "bc9a0a74e8d7fb0e11434dd3abaa0cb0572ccd3a65b5a192eea41832b286e8a0",  # 23.11 release verified
    strip_prefix = "nixpkgs-23.11",
    urls = ["https://github.com/NixOS/nixpkgs/archive/refs/tags/23.11.tar.gz"],
)



nix_lock = use_extension("//:extensions.bzl", "nix_lock_ext")
nix_lock.from_file(
    lockfile = "//nix_deps:nix.lock",
    nixpkgs_commit = "nixos-23.11",
)
use_repo(nix_lock, "nix_cache")
