load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "generator_lib",
    srcs = [
        "builder.go",
        "copier.go",
        "generator.go",
        "indexer.go",
        "loader.go",
        "types.go",
    ],
    data = [
        "@nix_portable//file",
        "@nixpkgs//:all_files",
    ],
    importpath = "github.com/JonathanPerry651/nix-bazel-via-bwrap/generator",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_bazelbuild_buildtools//build",
        "@rules_go//go/runfiles",
    ],
)

go_binary(
    name = "generator",
    embed = [":generator_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "generator_test",
    srcs = ["generator_test.go"],
    data = glob(["testdata/**"]),
    embed = [":generator_lib"],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
