load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "runner_lib",
    srcs = [
        "copier.go",
        "runner.go",
    ],
    importpath = "github.com/nix-bazel-via-bwrap/sandbox",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "runner",
    embed = [":sandbox_lib"],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "symlink_test",
    srcs = ["symlink_test.sh"],
    data = [":runner"],
)

go_library(
    name = "sandbox_lib",
    srcs = [
        "copier.go",
        "runner.go",
    ],
    importpath = "github.com/JonathanPerry651/nix-bazel-via-bwrap/sandbox",
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
