load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "nix_runner_lib",
    srcs = ["main.go"],
    importpath = "github.com/JonathanPerry651/nix-bazel-via-bwrap/cmd/nix_runner",
    visibility = ["//visibility:private"],
    deps = ["//pkg/sandbox"],
)

go_binary(
    name = "nix_runner",
    embed = [":nix_runner_lib"],
    visibility = ["//visibility:public"],
)
