load(
    "//:rules.bzl",
    "nix_derivation",
)

nix_derivation(
    name = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa-hello-2.10",
    srcs = ["@nixpkgs//:pkgs/applications/misc/hello/hello.c"],
    args = [
        "-c",
        "gcc hello.c -o $out",
    ],
    builder_path = "bash",
    env = {
        "builder": "bash",
        "name": "hello-2.10",
        "system": "x86_64-linux",
    },
    source_mappings = {"@nixpkgs//:pkgs/applications/misc/hello/hello.c": "/nix/store/cccccccccccccccccccccccccccccccc-hello.c"},
    store_names = {"out": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb-hello-2.10"},
)
