load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sandbox",
    srcs = [
        "builtins.go",
        "bwrap.go",
        "copier.go",
        "manifest.go",
        "resolve.go",
        "runfiles.go",
    ],
    importpath = "github.com/JonathanPerry651/nix-bazel-via-bwrap/pkg/sandbox",
    visibility = ["//visibility:public"],
)
