load(":defs.bzl", "nix_integration_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
)

nix_integration_test(
    name = "test_hello",
    test_flake = "//tests/flakes/minimal_hello:flake.nix",
    test_runner = "test_hello.sh",
)
