module(
    name = "manual_repro",
    version = "0.0.0",
)

bazel_dep(name = "nix_bazel_via_bwrap", version = "0.0.1")
local_path_override(
    module_name = "nix_bazel_via_bwrap",
    path = "PLACEHOLDER_REPO_ROOT",
)

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.45.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "nixpkgs",
    url = "https://github.com/NixOS/nixpkgs/archive/nixos-23.11.tar.gz",
    strip_prefix = "nixpkgs-nixos-23.11",
    build_file_content = """filegroup(name = "src", srcs = glob(["**"], exclude=["**/.git/**"]), visibility = ["//visibility:public"])
exports_files(["flake.nix"])""",
    sha256 = "01f26bb5466ab4e77c23d974c5abebb32e86403e60f837931c7951b464b2fd30",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_file(
    name = "nix_portable",
    downloaded_file_path = "nix-portable",
    executable = True,
    sha256 = "b409c55904c909ac3aeda3fb1253319f86a89ddd1ba31a5dec33d4a06414c72a",
    urls = ["https://github.com/DavHau/nix-portable/releases/download/v012/nix-portable-x86_64"],
)

nix_lock = use_extension("@nix_bazel_via_bwrap//:extensions.bzl", "nix_lock_ext")
nix_lock.from_file(
    lockfile = "//nix_deps:nix.lock",
    name = "repro_cache",
    nixpkgs_name = "repro_nixpkgs",
)
use_repo(nix_lock, "repro_cache", "repro_nixpkgs")
