module(name = "cache_miss_test", version = "0.0.0")

bazel_dep(name = "nix_bazel_via_bwrap")
local_path_override(
    module_name = "nix_bazel_via_bwrap",
    path = "/home/jonathanp/.cache/bazel/_bazel_jonathanp/4a994b850c1237a11c11f36522ba12bf/execroot/_main/bazel-out/k8-fastbuild/bin/tests/integration/test_cache_miss.runfiles/_main",
)

bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "rules_bazel_integration_test", version = "0.34.0")

nix_lock = use_extension("@nix_bazel_via_bwrap//:extensions.bzl", "nix_lock_ext")
nix_lock.from_file(
    lockfile = "//nix_deps:nix.lock",
    name = "e2e_cache",
    nixpkgs_name = "e2e_nixpkgs",
)
use_repo(nix_lock, "e2e_cache", "e2e_nixpkgs")
