module(name = "e2e_test", version = "0.0.0")

bazel_dep(name = "nix_bazel_via_bwrap")
local_path_override(
    module_name = "nix_bazel_via_bwrap",
    path = "../../..",
)

bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_bazel_integration_test", version = "0.34.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "nixpkgs",
    url = "https://github.com/NixOS/nixpkgs/archive/nixos-23.11.tar.gz",
    strip_prefix = "nixpkgs-nixos-23.11",
    build_file_content = """filegroup(name = "src", srcs = glob(["**"], exclude=["**/.git/**"]), visibility = ["//visibility:public"])""",
    sha256 = "01f26bb5466ab4e77c23d974c5abebb32e86403e60f837931c7951b464b2fd30",
)

nix_lock = use_extension("@nix_bazel_via_bwrap//:extensions.bzl", "nix_lock_ext")
nix_lock.from_file(
    lockfile = "//nix_deps:nix.lock",
    name = "e2e_cache",
    nixpkgs_name = "e2e_nixpkgs",
)
use_repo(nix_lock, "e2e_cache", "e2e_nixpkgs")
