module(name = "test_gazelle_update", version = "0.0.0")

bazel_dep(name = "nix_bazel_via_bwrap")
local_path_override(
    module_name = "nix_bazel_via_bwrap",
    path = "/home/jonathanp/.cache/bazel/_bazel_jonathanp/4a994b850c1237a11c11f36522ba12bf/execroot/_main/bazel-out/k8-fastbuild/bin/tests/integration/test_gazelle_update.runfiles/_main",
)

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_bazel_integration_test", version = "0.34.0")

# Nix Portable for testing updates
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_file(
    name = "nix_portable",
    downloaded_file_path = "nix-portable",
    executable = True,
    sha256 = "b409c55904c909ac3aeda3fb1253319f86a89ddd1ba31a5dec33d4a06414c72a",
    urls = ["https://github.com/DavHau/nix-portable/releases/download/v012/nix-portable-x86_64"],
)

# Use local lockfile
nix_lock = use_extension("@nix_bazel_via_bwrap//:extensions.bzl", "nix_lock_ext")
nix_lock.from_file(
    lockfile = "//nix_deps:nix.lock",
    name = "repo_cache",
    nixpkgs_name = "repo_nixpkgs",
    nixpkgs_commit = "nixos-23.11",
)
use_repo(nix_lock, "repo_cache", "repo_nixpkgs", "repo_cache_gazelle_plugin")
